# tsgen

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: check.sh
src/: coverage.rs  depth.rs  expand.rs  generate.rs  grammar.rs  lib.rs  main.rs  terminal.rs  validate.rs
testdata/test-lang/: grammar.js
