[package]
name = "tsgen"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_regex = "0.17"
regex = "1"
tree-sitter = "0.25"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
libloading = "0.8"
globset = "0.4"
